# binary-install

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: async_fs.rs  lib.rs
tests/all/: cache.rs  download.rs  main.rs  tokio_spawner.rs
