[package]
name = "binary-install-async"
description = "Install a binary from a path to a global cache asynchronously"
authors = ["Rust and WebAssembly Working Group"]
repository = "https://github.com/rustwasm/binary-install"
license = "MIT/Apache-2.0"
version = "0.0.1"
edition = "2018"
documentation = "https://docs.rs/binary-install"
readme = "./README.md"

[dependencies]
curl = "0.4.13"
dirs = "1.0.4"
failure = "0.1.2"
flate2 = "1.0.2"
hex = "0.3"
is_executable = "0.1.2"
siphasher = "0.2.3"
tar = "0.4.16"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0.5"
